--- a/application.yml
+++ b/application.yml
@@ -6,7 +6,7 @@ eureka-discovery-service:
 eureka:
   client:
     service-url:
-      defaultZone: http://${eureka-discovery-service.credentials.user}:${eureka-discovery-service.credentials.password}@172.31.40.53:8090/eureka
+      defaultZone: http://${eureka-discovery-service.credentials.user}:${eureka-discovery-service.credentials.password}@localhost:8090/eureka
 
 app:
   login:
